# Bitcurrent

./: .editorconfig  .gitignore  ACCOUNT_CREATION_GUIDE.md  ACHIEVEMENT_601_COMMITS.md  ADMIN_SETUP_MANUAL.md  ALL_FAKE_DATA_REMOVED.md  ALL_FIXES_SUMMARY.md  ALPACA_SETUP_INSTRUCTIONS.md  AUTHENTICATION_FIXED.md  AUTH_REDESIGN_COMPLETE.md  AWS_EKS_SETUP.md  BACKEND_COMPLETE.md  BACKEND_CRASH_STATUS.md  BACKEND_ENHANCEMENT_PLAN.md  BACKEND_FIXED_STATUS.md  BACKEND_SETUP_SUMMARY.md  BATCHES_101_150_SUMMARY.md  BITCURRENT_COMPLETE_GUIDE.md  BROWSER_TEST_RESULTS.md  CHANGELOG.md  CHECK_LOGIN.md  CLOUDFLARE_QUICK_START.md  CLOUDFLARE_SETUP_GUIDE.md  COMMITS_701_TO_1000_SUMMARY.md  COMPLETE_PLATFORM_SUMMARY.md  COMPLETE_SESSION_FIXES.md  COMPLETE_SUCCESS.md  COMPLETE_USER_GUIDE.md  COMPREHENSIVE_BUG_FIX_REPORT.md  COMPREHENSIVE_SESSION_SUMMARY.md  COMPREHENSIVE_STATUS.md  CONTRIBUTING.md  CRITICAL_ACTIONS_NEEDED.md  CRITICAL_FIXES_COMPLETE.md  CURRENT_BUILD_STATUS.md  CURRENT_ISSUES_AND_FIXES.md  CURRENT_STATUS_SUMMARY.md  DATABASE_READY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  (+139 more)
.github/: dependabot.yml
backend-broker/: .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.dev  MORNING_ACTIONS.md  README.md  nixpacks.toml  package-lock.json  package.json  railway.json  (+5 more)
matching-engine/: Cargo.toml  Dockerfile  README.md  build.rs
matching-engine/benches/: orderbook_benchmark.rs
matching-engine/proto/: matching.proto
matching-engine/src/: config.rs  lib.rs  main.rs  matching.rs  metrics.rs  orderbook.rs  sequence.rs  snapshot.rs  types.rs
matching-engine/src/grpc/: mod.rs  server.rs
matching-engine/src/kafka/: mod.rs  producer.rs
matching-engine/tests/: integration_test.rs
(+599 files in other folders)
