[package]
name = "bitcurrent-matching-engine"
version = "0.1.0"
edition = "2021"
authors = ["BitCurrent Team <engineering@bitcurrent.co.uk>"]
description = "Ultra-low latency matching engine for BitCurrent Exchange"
license = "Proprietary"

[lib]
name = "bitcurrent_matching_engine"
path = "src/lib.rs"

[[bin]]
name = "matching-engine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# gRPC and Protocol Buffers
tonic = "0.10"
prost = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data structures
crossbeam = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"
warp = "0.3"

# Kafka client
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Numerical types
rust_decimal = { version = "1.33", features = ["serde"] }

# Snapshots and persistence
bincode = "1.3"

[dev-dependencies]
# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"

[[bench]]
name = "orderbook_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[build-dependencies]
tonic-build = "0.10"
